# minisim

./: .clangd  AerobodyTests.cpp:Zone.Identifier  CMakeLists.txt
Aerobody/: Aerobody.cpp  AerobodyTests.cpp:Zone.Identifier  VelocityVector.hpp
Motor/: Motor.h
Tire/: TireTests.cpp:Zone.Identifier
src/: CMakeLists.txt  CMakeLists.txt:Zone.Identifier
src/RaceRunner/: CMakeLists.txt  RaceRunner.cpp
src/RaceSegmentRunner/: CMakeLists.txt  RaceSegmentRunner.cpp  RaceSegmentRunnerTests.cpp:Zone.Identifier
src/SolarCar/: CMakeLists.txt
src/SolarCar/Aerobody/: Aerobody.cpp  CMakeLists.txt  VelocityVector.cpp  VelocityVector.h
src/SolarCar/Array/: Array.cpp
src/SolarCar/Battery/: Battery.cpp  BatteryState.cpp
src/SolarCar/Motor/: Motor.cpp
src/SolarCar/Tire/: Tire.cpp
